# todo_manager

./: pyproject.toml
todo_manager/templates/: index.html
todo_manager/todo_manager/: settings.py
