[tool.poetry]
name = "todo django test"
version = "0.1.0"
description = ""
authors = ["IvanB <baklanovivan25@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
